# numerical-collection-cpp

./: .clang-format  .clang-tidy  .clang-tidy-checker  .cmake-format.py  .flake8  .gitignore  .gitlab-ci.yml  .gitmessage  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  CTestCustom.cmake  NOTICE.txt  Pipfile  README.md  conanfile.py  cspell.json  iwyu_mappings.imp  mypy.ini  pyproject.toml  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
doc/: CMakeLists.txt  articles.bib
doc/adr/: 0000-README.md  0001-record-architecture-decisions.md  0002-Remove-API-reference-from-documentation-generated-by-Sphinx.md  0003-use-unity-build-to-speed-up-clang-tidy.md  0004-Stop-using-lambda-functions-in-macros.md  0005-Remove-thread-sanitizer.md
doc/doxygen/: .clang-tidy  CMakeLists.txt  Doxyfile.in  DoxygenREADME.md  custom.css  namespaces.h
doc/icon_logo/design/: design_note.md
doc/sphinx/: CMakeLists.txt  start_auto_build.sh.in
doc/sphinx/src/: acknowledgement.rst  algorithm_list.md  bibliography.rst  conf.py  convention.rst  conventions.md  directories.rst  how_to_build_in_repository.md  how_to_use.md  index.rst  installation.md  license.rst  modules.rst
examples/: CMakeLists.txt  configure_logging.h  doxygen_specifications.h
examples/auto_diff/: CMakeLists.txt  backward.cpp  forward.cpp  xexp.h
examples/example_common/: CMakeLists.txt
examples/example_common/include/: configure_logging.h  para_view_time_steps_data_file_writer.h  toml_parser.h  write_png.h  write_vtp_file_for_comparison.h  write_vtp_file_with_solution.h  write_vtu_file_for_comparison.h
examples/linear/: CMakeLists.txt  laplacian_2d_grid.cpp  laplacian_2d_grid.toml  ordering_methods.cpp
examples/logging/: CMakeLists.txt  write_logs.cpp
examples/ode/: CMakeLists.txt  rk4_solver.cpp  rkf45_solver.cpp
examples/opt/: CMakeLists.txt  adaptive_diagonal_curves.cpp  dividing_rectangles.cpp  downhill_simplex.cpp  golden_section_search.cpp  steepest_descent.cpp
examples/pde/: CMakeLists.txt  fd_rodasp_wave1d.cpp  fd_rodasp_wave1d.toml  rbf_fd_advection_diffusion_equation_1d.cpp  rbf_fd_advection_diffusion_equation_1d.toml  rbf_fd_advection_diffusion_equation_2d.cpp  rbf_fd_advection_diffusion_equation_2d.toml  rbf_fd_advection_diffusion_equation_2d_ref.edp  rbf_fd_advection_equation_1d.cpp  rbf_fd_advection_equation_2d.cpp  rbf_fd_advection_equation_2d.toml  rbf_fd_burgers_equation_2d.cpp  rbf_fd_burgers_equation_2d.toml  rbf_fd_burgers_equation_2d_ref.edp  rbf_fd_convection_diffusion_equation_1d.cpp  rbf_fd_convection_diffusion_equation_1d.toml  rbf_fd_diffusion_equation_2d_dirichlet.cpp  rbf_fd_diffusion_equation_2d_dirichlet.toml  rbf_fd_diffusion_equation_2d_neumann.cpp  rbf_fd_diffusion_equation_2d_neumann.toml  rbf_fd_wave_equation_1d_string.cpp  rbf_fd_wave_equation_1d_string.toml
examples/rbf/: CMakeLists.txt  generate_2d_halton_nodes.cpp  interpolate_2d.cpp  visualize_rbf_in_1d.cpp
examples/regularization/: CMakeLists.txt  blur_sine_tikhonov.cpp  ct_simulation_common.h  ct_simulation_config.toml  ct_simulation_config_small.toml  ct_simulation_fista.cpp  ct_simulation_tgv2_admm.cpp  ct_simulation_tv_admm.cpp  ct_simulation_write_png.h  image_denoising_common.h  image_denoising_config.toml  image_denoising_config_small.toml  image_denoising_fista.cpp  image_denoising_tgv2_admm.cpp  image_denoising_tv_admm.cpp  image_denoising_write_png.h  plot_gcv_with_fista.cpp  plot_l_curve_with_fista.cpp  sparse_image_regularization.cpp  upsampling_common.h  upsampling_config.toml  upsampling_config_small.toml  upsampling_tgv2_admm.cpp  upsampling_tv_admm.cpp
examples/roots/: CMakeLists.txt  newton_raphson.cpp
examples/util/: CMakeLists.txt  kahan_adder.cpp
experiments/: CMakeLists.txt
experiments/linear/: CMakeLists.txt  laplacian_2d_grid.cpp  ordering_methods.cpp
experiments/ode/: CMakeLists.txt  calculate_radau_coefficients.cpp
experiments/pde/: CMakeLists.txt  linear_equation_solver.cpp  linear_equation_solver.toml  rbf_fd_advection_equation_1d.cpp  rbf_fd_advection_equation_1d.toml  rbf_fd_diffusion_equation_2d.cpp  rbf_fd_diffusion_equation_2d.toml  rbf_fd_diffusion_equation_2d_dirichlet.cpp  rbf_fd_diffusion_equation_2d_dirichlet.toml  rbf_fd_diffusion_equation_2d_neumann.cpp  rbf_fd_diffusion_equation_2d_neumann.toml  rbf_fd_laplacian_matrix_2d.cpp  rbf_fd_laplacian_matrix_2d.toml  rbf_fd_poisson_equation_1d.cpp  rbf_fd_poisson_equation_1d.toml  rbf_fd_poisson_equation_2d.cpp  rbf_fd_poisson_equation_2d.toml  rbf_fd_poisson_equation_3d.cpp  rbf_fd_poisson_equation_3d.toml  rbf_fd_wave_equation_1d_string.cpp  rbf_fd_wave_equation_1d_string.toml  rbf_fd_weights_2d.cpp  runge_kutta_equation_solver.cpp  runge_kutta_equation_solver.toml
experiments/rbf/: CMakeLists.txt  visualize_rbf_in_1d.cpp
experiments/regularization/: CMakeLists.txt  approx_l_curve.cpp  blur_sine_tikhonov.cpp  calculate_derivatives_of_2d_images.cpp  calculate_tgv2_derivatives_of_2d_images.cpp  plot_gcv_with_fista.cpp  plot_l_curve_with_fista.cpp
profiling/: CMakeLists.txt
profiling/linear/: CMakeLists.txt  algebraic_multigrid_solver_compute.cpp
profiling/logging/: CMakeLists.txt  ignore_logs.cpp  write_trace_logs.cpp
profiling/ode/: CMakeLists.txt  rodasp_solver.cpp
profiling/opt/: CMakeLists.txt  adaptive_diagonal_curves.cpp
profiling/rbf/: CMakeLists.txt  global_rbf_interpolator_2d.cpp  local_csrbf_interpolator_2d.cpp
profiling/regularization/: CMakeLists.txt  ct_simulation_common.h  ct_simulation_tgv2_admm.cpp
src/: CMakeLists.txt  source_list.cmake  unity_source.cpp
test/: CMakeLists.txt  README.md
test/bench/: CMakeLists.txt
test/conan_package/: CMakeLists.txt  conanfile.py  example.cpp
test/include/: comparison_approvals.h  eigen_approx.h  is_finite.h  trompeloeil_catch2.h
test/integ/: CMakeLists.txt  README.md  catch_event_listner.cpp  test_main.cpp
test/units/: CMakeLists.txt  catch_event_listner.cpp  create_unity_file.py  source_list.cmake  test_main.cpp  unity_source.cpp
test/utils/: CMakeLists.txt
(+2099 files in other folders)
