[project]
name = "numerical-collection-cpp"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Kenta Kabashima", email = "kenta_program37@hotmail.co.jp" },
]
dependencies = ["setuptools (>=82.0.1)"]

[tool.poetry]
packages = [
    { include = "num_collect_test_utils", from = "scripts" },
    { include = "num_collect_colors", from = "scripts" },
]

[tool.poetry.group.test.dependencies]
kaleido = "^1.2.0"
pandas = "^3.0.2"
plotly = "^6.7.0"
pytest = "^9.0.3"
pytest-approvaltests = "^0.2.4"
fastjsonschema = "^2.21.2"
pytomlpp = "^1.1.0"
msgpack = "^1.1.2"
playwright = "^1.58.0"
click = "^8.3.3"
mpmath = "^1.4.1"

[tool.poetry.group.doc.dependencies]
sphinx = "^9.1.0"
sphinx-orange-book-theme = "^0.19.0"
myst-parser = "^5.0.0"
sphinxcontrib-plantuml = "^0.31"
sphinxcontrib-bibtex = "^2.6.5"
jupyterlab = "^4.5.6"
ipywidgets = "^8.1.8"
ipython = "^9.13.0"
ipykernel = "^7.2.0"
myst-nb = "^1.4.0"
ms37-designs = {git = "https://gitlab.com/MusicScience37Projects/utility-libraries/ms37-designs.git", rev = "f1f39517a2de68e48dc5e96caa7012c24cec0f8c"}

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
cmakelang = "^0.6.13"
doc8 = "^2.0.0"
pre-commit = "^4.6.0"
sphinx-autobuild = "^2025.8.25"
tqdm = "^4.67.3"
lizard = "^1.22.1"
lcov-cobertura = "^2.1.1"
clang-tidy-checker = "^0.6.0"
isort = "^8.0.1"
jsonschema2md = "^1.7.0"
pylint = "^4.0.5"
flake8 = "^7.3.0"
mypy = "^1.20.2"
pandas-stubs = "^3.0.0.260204"
types-tqdm = "^4.67.3.20260408"
pyyaml = "^6.0.3"
types-pyyaml = "^6.0.12.20260408"
colour-science = "^0.4.7"
networkx = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["R0801"]
