[project]
name = "numerical-collection-cpp"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Kenta Kabashima", email = "kenta_program37@hotmail.co.jp" },
]
dependencies = ["setuptools (>=83.0.0,<84.0.0)"]

[tool.poetry]
packages = [
    { include = "num_collect_test_utils", from = "scripts" },
    { include = "num_collect_docs_utils", from = "scripts" },
    { include = "num_collect_colors", from = "scripts" },
]

[tool.poetry.group.test.dependencies]
kaleido = "^1.3.0"
pandas = "^3.0.3"
plotly = "^6.9.0"
pytest = "^9.1.1"
pytest-approvaltests = "^0.2.4"
fastjsonschema = "^2.21.2"
pytomlpp = "^1.1.0"
msgpack = "^1.2.1"
playwright = "^1.61.0"
click = "^8.4.2"
mpmath = "^1.4.1"

[tool.poetry.group.doc.dependencies]
sphinx = "^9.1.0"
sphinx-orange-book-theme = "^0.21.0"
myst-parser = "^5.1.0"
sphinxcontrib-plantuml = "^0.31"
sphinxcontrib-bibtex = "^2.7.0"
jupyterlab = "^4.6.1"
ipywidgets = "^8.1.8"
ipython = "^9.15.0"
ipykernel = "^7.3.0"
myst-nb = "^1.4.0"
ms37-designs = { git = "https://gitlab.com/MusicScience37Projects/utility-libraries/ms37-designs.git", rev = "5166be0cf70aa6270e7d9c7f7c8baacdf2551a67" }

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
cmakelang = "^0.6.13"
doc8 = "^2.0.0"
pre-commit = "^4.6.0"
sphinx-autobuild = "^2025.8.25"
tqdm = "^4.68.4"
lizard = "^1.23.0"
lcov-cobertura = "^2.1.1"
clang-tidy-checker = "^0.6.0"
isort = "^8.0.1"
jsonschema2md = "^1.7.0"
pylint = "^4.0.6"
flake8 = "^7.3.0"
mypy = "^2.3.0"
pandas-stubs = "^3.0.3.260530"
types-tqdm = "^4.68.0.20260608"
pyyaml = "^6.0.3"
types-pyyaml = "^6.0.12.20260518"
colour-science = "^0.4.7"
networkx = "^3.6.1"
scipy = "^1.18.0"
scipy-stubs = "^1.18.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["R0801", "C0413", "C0411", "W0404", "C0412", "C0114"]
